--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,18 @@
-Documentation:
+Style/Documentation:
   Enabled: false
-AbcSize:
+Style/FormatString:
   Enabled: false
-MethodLength:
+Style/Next:
   Enabled: false
-UnusedMethodArgument:
+Style/SymbolArray:
+  Enabled: false
+Metrics/AbcSize:
+  Enabled: false
+Metrics/ClassLength:
+  Enabled: false
+Metrics/CyclomaticComplexity:
+  Enabled: false
+Metrics/MethodLength:
+  Enabled: false
+Metrics/PerceivedComplexity:
   Enabled: false
